bug 230104 : fall back to ISO-8859-1 in the script loader when charset name is not recognized or no Unicode decoder is available (r=smontagu, sr=bz)